fix : skill-progress spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11444,12 +11444,12 @@ ul.children {
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .progress-area {
-    padding: 0 12px;
+    padding: 0 12px !important;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .progress-area .elementor-widget-wrap {
-    padding: 0;
+    padding: 0 !important;
   }
 }
 .progress-area .skill-progressbar {
