--- a/sass/pages/_doctor-single.scss
+++ b/sass/pages/_doctor-single.scss
@@ -111,11 +111,11 @@
 // Theme
 .progress-area{
     @include sm{
-        padding: 0 12px;
+        padding: 0 12px !important;
     }
     .elementor-widget-wrap{
         @include sm{
-            padding: 0;
+            padding: 0 !important;
         }
     }
     .skill-progressbar{
